refactor: replace ScmsHealth subquery logic with ROW_NUMBER window function and update related tests and projection